--- a/index.html
+++ b/index.html
@@ -3,124 +3,196 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IndiTube - Watch & Earn</title>
-  <link rel="manifest" href="manifest.json" />
+  <title>IndiTube</title>
   <style>
-    body {font-family: Arial, sans-serif; text-align: center; background: #fff8f0; margin:0; padding:20px;}
-    h1 {color: #d40000;}
-    .section {margin:20px 0;}
-    .video-card, .upload-card {background: #fff; border-radius:10px; box-shadow:0 0 10px #ccc; padding:15px; margin-top:20px;}
-    iframe, video {max-width:300px; border-radius:10px;}
-    .reward-tag {background:green;color:white;padding:5px 10px;border-radius:5px;margin-top:10px;display:inline-block;}
-    button {padding:10px 20px;background:#d40000;color:white;border:none;border-radius:5px;margin-top:10px;cursor:pointer;}
-    #wallet {margin-top:20px;font-size:20px;}
-    #connectorBtn {background-color:yellow;color:black;font-weight:bold;}
-    #connectorBtn.clicked {background-color:green;color:white;}
-    img.profile {width:80px;height:80px;object-fit:cover;border-radius:50%;margin-top:10px;}
-    input[type="file"], input[type="text"] {margin:5px;}
+    body { margin:0; font-family:sans-serif; background:#f2f2f2; }
+    header { background:#d40000; color:#fff; padding:1rem; display:flex; justify-content:space-between; }
+    header .wallet { font-size:1.1em; font-weight:bold; }
+    .section { display:none; padding:1rem; }
+    .section.active { display:block; }
+    nav { position:fixed; bottom:0; width:100%; background:#ddd; display:flex; }
+    nav button { flex:1; padding:1rem; border:none; background:transparent; cursor:pointer; }
+    .card { background:#fff; margin:1rem 0; padding:1rem; border-radius:8px; box-shadow:0 0 8px rgba(0,0,0,0.1); }
+    video { width:100%; border-radius:4px; }
+    .timer { margin-top:5px; font-weight:bold; color:green; }
+    .reward-tag { margin-top:5px; display:inline-block; background:green; color:#fff; padding:4px 8px; border-radius:4px; }
+    input, select, button, textarea { width:100%; padding:10px; margin-top:10px; border:1px solid #ccc; border-radius:5px; }
+    button.action { background:#d40000; color:#fff; border:none; cursor:pointer; }
+    .status, .preview { margin-top:10px; }
+    .top-info { display:flex; align-items:center; gap:10px; margin-top:10px; }
+    .top-info img { width:40px; height:40px; border-radius:50%; }
+    .connector { margin-left:auto; background:yellow; border:none; padding:4px 8px; border-radius:4px; }
+    .likes { margin-top:8px; }
+    .likes button { margin-right:8px; }
+    .comment { background:#f0f0f0; margin-top:5px; padding:5px; border-radius:4px; }
   </style>
 </head>
 <body>
-  <h1>📻 IndiTube</h1>
-  <p>Watch videos to earn ₹5. Upload & create your channel to earn ₹10!</p>
 
-  <div id="wallet">
-    🪙 Coins: <span id="coins">0</span><br>
-    💸 Balance: ₹<span id="balance">0</span>
-  </div>
+<header>
+  <div>🎥 IndiTube</div>
+  <div class="wallet">Wallet: ₹<span id="wallet">0</span></div>
+</header>
 
-  <div class="video-card section">
-    <iframe src="https://www.youtube.com/embed/fdkaVRn_bL4" frameborder="0" allowfullscreen></iframe>
-    <div class="reward-tag">Earn ₹5</div><br/>
-    <button onclick="earnReward(5)">✅ I watched it</button>
-  </div>
+<div id="loginBox" style="padding:2rem; text-align:center;">
+  <h2>Login</h2>
+  <input id="user" placeholder="Username">
+  <input id="pass" type="password" placeholder="Password">
+  <button class="action" onclick="login()">Login</button>
+</div>
 
-  <div class="upload-card section">
-    <h3>🎨 Upload Video & Create Channel</h3>
-    <input type="file" accept="video/*" onchange="previewUpload(event)" /><br/>
-    <input type="text" placeholder="Your Channel Name" id="channelName" /><br/>
-    <input type="file" accept="image/*" onchange="setChannelImage(event)" /><br/>
-    <div id="previewArea"></div>
-  </div>
+<div id="app" style="display:none;">
+  <section id="uploadSec" class="section active">
+    <h3>📤 Upload Video (R2)</h3>
+    <input id="title" placeholder="Video Title">
+    <input id="channel" placeholder="Your Channel Name">
+    <input type="file" id="videoFile" accept="video/*">
+    <button class="action" onclick="handleUpload()">Upload</button>
+    <div class="status" id="upStatus"></div>
+    <div class="preview" id="upPreview"></div>
+  </section>
 
-  <div class="section">
-    <button id="connectorBtn" onclick="connectChannel()">🔔 Connector (<span id="connectCount">0</span>)</button>
-  </div>
+  <section id="videos" class="section">
+    <h3>📺 Watch & Earn</h3>
+    <div id="videoList"></div>
+  </section>
 
-  <div class="section">
-    <button onclick="resetWallet()">🔄 Reset</button>
-    <button onclick="redeem()">💰 Redeem</button>
-  </div>
+  <section id="walletSec" class="section">
+    <h3>💰 Withdraw Funds</h3>
+    <p>Balance: ₹<span id="balance">0</span></p>
+    <input id="name" placeholder="Your Name">
+    <select id="method"><option value="">Select Method</option><option>Paytm</option><option>Google Pay</option><option>PhonePe</option><option>UPI</option></select>
+    <input id="upi" placeholder="UPI ID / Number">
+    <button class="action" onclick="redeem()">Withdraw</button>
+  </section>
 
-  <audio id="clickSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_783be14e94.mp3" preload="auto"></audio>
+  <nav>
+    <button onclick="go('uploadSec')">⬆ Upload</button>
+    <button onclick="go('videos')">📺 Videos</button>
+    <button onclick="go('walletSec')">💰 Wallet</button>
+  </nav>
+</div>
 
-  <script>
-    let coins = localStorage.getItem("coins") || 0;
-    let balance = localStorage.getItem("balance") || 0;
-    let connectCount = localStorage.getItem("connectCount") || 0;
-    document.getElementById("coins").innerText = coins;
-    document.getElementById("balance").innerText = balance;
-    document.getElementById("connectCount").innerText = connectCount;
+<script>
+  let wallet = parseInt(localStorage.getItem('wallet')||0);
+  const bucketUrl = "https://pub-1ec8768011d245ba03892bf1f9052.r2.dev/inditube";
+  let videos = JSON.parse(localStorage.getItem('videos')||'[]');
 
-    function earnReward(amount) {
-      coins = parseInt(coins)+1; balance = parseInt(balance)+amount;
-      localStorage.setItem("coins",coins);
-      localStorage.setItem("balance",balance);
-      document.getElementById("coins").innerText=coins;
-      document.getElementById("balance").innerText=balance;
-      alert(`🎉 You earned ₹${amount}!`);
+  function login(){
+    if(!user.value||!pass.value) return alert('Enter credentials');
+    loginBox.style.display='none';
+    app.style.display='block';
+    document.getElementById('wallet').innerText=wallet;
+    document.getElementById('balance').innerText=wallet;
+    renderVideos();
+  }
+
+  function go(id){
+    document.querySelectorAll('.section').forEach(s=>s.classList.remove('active'));
+    document.getElementById(id).classList.add('active');
+    document.getElementById('wallet').innerText=wallet;
+    document.getElementById('balance').innerText=wallet;
+  }
+
+  async function handleUpload(){
+    const file = videoFile.files[0];
+    if(!file||!title.value||!channel.value) return alert('All fields required');
+    const name=encodeURIComponent(file.name);
+    const url=bucketUrl + '/' + name;
+    upStatus.innerText = 'Uploading... ⏳';
+    try{
+      const res = await fetch(url,{
+        method:'PUT',
+        headers:{'Content-Type':file.type},
+        body:file
+      });
+      if(res.ok){
+        videos.unshift({title:title.value, channel:channel.value, url, earned:false, likes:0, dislikes:0, comments:[], connectors:0});
+        localStorage.setItem('videos',JSON.stringify(videos));
+        upStatus.innerText='✅ Upload successful!';
+        upPreview.innerHTML=`<video src="${url}" controls></video>`;
+        go('videos');
+        renderVideos();
+      } else upStatus.innerText='❌ Upload failed: '+res.statusText;
+    } catch(e){
+      upStatus.innerText='❌ Error: '+e.message;
     }
+  }
 
-    function resetWallet() {
-      if(confirm("Reset everything?")) {
-        localStorage.clear();
-        location.reload();
-      }
-    }
+  function renderVideos(){
+    videoList.innerHTML='';
+    videos.forEach((v,i)=>{
+      const div=document.createElement('div');
+      div.className='card';
+      div.innerHTML=`
+        <video id="vid${i}" src="${v.url}" controls></video>
+        <div class="timer" id="timer${i}">⏱ Not started</div>
+        <div class="reward-tag">Earn ₹5</div>
+        <h4>${v.title}</h4>
+        <div class="top-info">
+          <img src="https://via.placeholder.com/40">
+          <strong>${v.channel}</strong>
+          <button class="connector" onclick="connect(${i},this)">Connector (${v.connectors})</button>
+        </div>
+        <div class="likes">
+          <button onclick="like(${i})">👍 (${v.likes})</button>
+          <button onclick="dislike(${i})">👎 (${v.dislikes})</button>
+          <button onclick="share()">🔗 Share</button>
+        </div>
+        <textarea id="comment${i}" placeholder="Leave a comment..."></textarea>
+        <button onclick="addComment(${i})">Comment</button>
+        <div id="comments${i}">${v.comments.map(c=>`<div class='comment'>${c}</div>`).join('')}</div>`;
+      videoList.appendChild(div);
+      setupTimer(i);
+    });
+  }
 
-    function redeem() {
-      if(balance>=100) {
-        alert("🎉 Redeem request submitted! Contact admin with UPI.");
-        resetWallet();
-      } else alert("💡 You need ₹100 to redeem.");
-    }
+  function setupTimer(i){
+    const vid=document.getElementById(`vid${i}`);
+    const timer=document.getElementById(`timer${i}`);
+    let intv;
+    vid.addEventListener('play',()=>{
+      if(videos[i].earned){ timer.innerText='✅ Already Earned'; return; }
+      clearInterval(intv);
+      intv=setInterval(()=>{
+        const t=Math.floor(vid.currentTime);
+        if(t>=30){
+          clearInterval(intv);
+          wallet+=5;
+          videos[i].earned=true;
+          saveAll();
+          timer.innerText='✅ Earned ₹5!';
+        } else timer.innerText=`⏱ ${t}/30 sec`;
+      },1000);
+    });
+  }
 
-    function previewUpload(e) {
-      const file=e.target.files[0];
-      const channel=document.getElementById("channelName").value;
-      if(file&&channel) {
-        const videoURL=URL.createObjectURL(file);
-        const imageURL=localStorage.getItem("channelImg")||"";
-        document.getElementById("previewArea").innerHTML = `
-          <video controls src="${videoURL}"></video>
-          <div class="reward-tag">Earn ₹10</div><br/>
-          <img src="${imageURL}" class="profile" alt="Channel"/><br/>
-          <strong>${channel}</strong><br/>
-          <button onclick="earnReward(10)">✅ I uploaded</button>`;
-      } else alert("Enter channel name & select video.");
-    }
+  function like(i){ videos[i].likes++; saveAll(); }
+  function dislike(i){ videos[i].dislikes++; saveAll(); }
+  function connect(i,btn){ videos[i].connectors++; btn.disabled=true; saveAll(); }
+  function addComment(i){
+    const c = document.getElementById(`comment${i}`).value;
+    if(!c) return;
+    videos[i].comments.push(c);
+    saveAll();
+  }
+  function share(){
+    if(navigator.share) navigator.share({title:'IndiTube Video', url:location.href});
+    else alert('Sharing not supported');
+  }
+  function redeem(){
+    if(wallet<100) return alert('Minimum ₹100 to withdraw');
+    if(!name.value||!method.value||!upi.value) return alert('Fill all fields');
+    alert(`Withdrawal request ₹${wallet} via ${method.value}`);
+    wallet=0; saveAll();
+  }
+  function saveAll(){
+    localStorage.setItem('videos',JSON.stringify(videos));
+    localStorage.setItem('wallet',wallet);
+    document.getElementById('wallet').innerText=wallet;
+    document.getElementById('balance').innerText=wallet;
+  }
+</script>
 
-    function setChannelImage(e) {
-      const f=e.target.files[0];
-      if(f) {
-        const reader=new FileReader();
-        reader.onload = function(ev) {
-          localStorage.setItem("channelImg",ev.target.result);
-        };
-        reader.readAsDataURL(f);
-      }
-    }
-
-    function connectChannel() {
-      const btn=document.getElementById("connectorBtn");
-      if(!btn.classList.contains("clicked")) {
-        btn.classList.add("clicked");
-        document.getElementById("clickSound").play();
-        connectCount= parseInt(connectCount)+1;
-        localStorage.setItem("connectCount",connectCount);
-        document.getElementById("connectCount").innerText=connectCount;
-      }
-    }
-  </script>
 </body>
 </html>
