--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IndiTubes</title>
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#e53935"/>
   <style>
     body{margin:0;font-family:sans-serif;background:#f2f3f5;color:#333;}
     header{background:#e53935;color:#fff;padding:1rem;display:flex;justify-content:space-between;align-items:center;}
@@ -40,18 +42,14 @@
     <button onclick="doLogin()">Go</button>
   </div>
 
-  <div id="app">
+  <div id="app" style="display:none;">
     <section id="home" class="active"></section>
     <section id="upload">
       <h3>Upload Video</h3>
       <input id="chName" placeholder="Channel Name"/><br/>
       <button id="uploadBtn">⬆ Upload via Cloudinary</button>
     </section>
-    <section id="profile">
-      <h3>Your Profile</h3>
-      <div id="meInfo"></div>
-      <div id="profVideos"></div>
-    </section>
+    <section id="profile"><h3>Your Profile</h3><div id="meInfo"></div><div id="profVideos"></div></section>
     <section id="withdraw">
       <h3>Withdraw</h3>
       <p><strong>Balance:</strong> ₹<span id="balAmt">0</span></p>
@@ -114,62 +112,45 @@
     }
 
     function go(id) {
-      Array.from(document.querySelectorAll("section")).forEach(s => s.classList.remove("active"));
+      [...document.querySelectorAll("section")].forEach(s => s.classList.remove("active"));
       document.getElementById(id).classList.add("active");
-      if (id === "withdraw") document.getElementById("balAmt").innerText = sessions[current].wallet;
+      if (id == "withdraw") document.getElementById("balAmt").innerText = sessions[current].wallet;
     }
 
     const widget = cloudinary.createUploadWidget({
-      cloudName, uploadPreset,
-      sources: ["local","url","camera"],
+      cloudName, uploadPreset, sources: ["local", "url", "camera"],
       resourceType: "video", folder: "inditube-videos", multiple: false
     }, (err, res) => {
       if (!err && res.event === "success") {
         const info = res.info;
         const v = {
-          id: Date.now(),
-          title: info.original_filename,
-          url: info.secure_url,
-          channel: sessions[current].channel,
-          user: current,
-          likes: 0,
-          dislikes: 0,
-          views: 0,
-          earned: false,
-          connected: false
+          id: Date.now(), title: info.original_filename, url: info.secure_url,
+          channel: sessions[current].channel, user: current,
+          likes: 0, dislikes: 0, views: 0, earned: false, connected: false
         };
-        sessions[current].videos.push(v);
-        saveAll();
-        renderAll();
-        go("home");
+        sessions[current].videos.push(v); saveAll(); renderAll(); go("home");
       }
     });
 
     uploadBtn.onclick = () => {
-      const cn = chName.value.trim();
-      if (cn) {
-        sessions[current].channel = cn;
-      }
-      saveAll();
-      widget.open();
+      let cn = chName.value.trim();
+      if (cn) sessions[current].channel = cn;
+      saveAll(); widget.open();
     };
 
     function renderAll() {
-      updateWallet();
-      renderHome();
-      renderProfile();
+      updateWallet(); renderHome(); renderProfile();
     }
 
     function updateWallet() {
-      document.getElementById("wallet").innerText = sessions[current].wallet;
+      wallet.innerText = sessions[current].wallet;
     }
 
     function renderHome() {
       const all = Object.values(sessions).flatMap(s => s.videos);
-      let html = "<h3>Home</h3>";
-      all.forEach(v => {
+      home.innerHTML = "<h3>Home</h3>" + all.map(v => {
         const me = sessions[v.user];
-        html += `
+        return `
           <div class="card">
             <video id="vid${v.id}" src="${v.url}" controls></video>
             <div class="top-info">
@@ -185,26 +166,67 @@
               <span class="timer" id="timer${v.id}">Watch 30s to earn ₹5</span>
             </div>
           </div>`;
-      });
-      document.getElementById("home").innerHTML = html;
+      }).join('');
       all.forEach(setupTimer);
     }
 
     function renderProfile() {
       const me = sessions[current];
-      document.getElementById("meInfo").innerHTML = `
+      meInfo.innerHTML = `
         <div class="top-info">
           <img src="${me.chImg || ''}" onerror="this.style.display='none'"/>
           <strong>${me.channel}</strong>
         </div>`;
-      let html = "";
-      me.videos.forEach(v => {
-        html += `<div class="card">
-          <video src="${v.url}" controls></video>
-          <div>Likes: ${v.likes} | Dislikes: ${v.dislikes} | Views: ${v.views}</div>
-        </div>`;
-      });
-      document.getElementById("profVideos").innerHTML = html;
+      profVideos.innerHTML = me.videos.map(v => `
+        <div class="card"><video src="${v.url}" controls></video>
+        <div>Likes: ${v.likes} | Dislikes: ${v.dislikes} | Views: ${v.views}</div></div>
+      `).join('');
+    }
+
+    function like(id, btn) {
+      changeVid(id, v => v.likes++);
+      btn.innerText = "👍" + findVid(id).likes;
+    }
+
+    function dislike(id, btn) {
+      changeVid(id, v => v.dislikes++);
+      btn.innerText = "👎" + findVid(id).dislikes;
+    }
+
+    function connect(id, btn) {
+      changeVid(id, v => v.connected = true);
+      btn.classList.add("active");
+      btn.innerText = "Connected";
+    }
+
+    function shareVid(url) {
+      const msg = `Watch this on IndiTubes:\n${url}`;
+      if (navigator.share) navigator.share({ text: msg });
+      else prompt("Copy link:", msg);
+    }
+
+    function setupTimer(v) {
+      const vid = document.getElementById(`vid${v.id}`);
+      const timer = document.getElementById(`timer${v.id}`);
+      vid.onplay = () => {
+        const earned = findVid(v.id).earned;
+        if (earned) { timer.innerText = "✅ Earned ₹5"; return; }
+        let iv = setInterval(() => {
+          const t = Math.floor(vid.currentTime);
+          timer.innerText = `⏱ ${t}/30 sec`;
+          if (t >= 30) {
+            clearInterval(iv);
+            changeVid(v.id, vi => {
+              if (!vi.earned) {
+                vi.earned = true; vi.views++;
+                sessions[vi.user].wallet += 5;
+              }
+            });
+            timer.innerText = "✅ Earned ₹5!";
+            updateWallet(); renderProfile();
+          }
+        }, 500);
+      };
     }
 
     function findVid(id) {
@@ -221,74 +243,28 @@
       saveAll();
     }
 
-    function like(id, btn) {
-      changeVid(id, v => v.likes++);
-      btn.innerText = "👍" + findVid(id).likes;
-    }
-
-    function dislike(id, btn) {
-      changeVid(id, v => v.dislikes++);
-      btn.innerText = "👎" + findVid(id).dislikes;
-    }
-
-    function connect(id, btn) {
-      changeVid(id, v => {
-        if (!v.connected) v.connected = true;
-      });
-      btn.classList.add("active");
-      btn.innerText = "Connected";
-    }
-
-    function shareVid(url) {
-      const msg = `Watch this on IndiTubes:\n${url}`;
-      if (navigator.share) navigator.share({ text: msg });
-      else prompt("Copy link:", msg);
-    }
-
-    function setupTimer(v) {
-      const vid = document.getElementById(`vid${v.id}`);
-      const timer = document.getElementById(`timer${v.id}`);
-      vid.onplay = () => {
-        const earned = findVid(v.id).earned;
-        if (earned) {
-          timer.innerText = "✅ Earned ₹5";
-          return;
-        }
-        let iv = setInterval(() => {
-          const t = Math.floor(vid.currentTime);
-          timer.innerText = `⏱ ${t}/30 sec`;
-          if (t >= 30) {
-            clearInterval(iv);
-            changeVid(v.id, vi => {
-              if (!vi.earned) {
-                vi.earned = true;
-                vi.views++;
-                sessions[vi.user].wallet += 5;
-              }
-            });
-            timer.innerText = "✅ Earned ₹5!";
-            updateWallet();
-            renderProfile();
-          }
-        }, 500);
-      };
-    }
-
     function redeem() {
       const amt = parseInt(wAmount.value),
             n = wName.value.trim(),
             c = wContact.value.trim(),
             u = wUPI.value.trim();
       if (!amt || !n || !c || !u) return alert("Fill all fields");
-      if (amt > sessions[current].wallet) return alert("Insufficient balance");
-      sessions[current].wallet -= amt;
-      saveAll();
-      updateWallet();
+      if (amt > sessions[current].wallet) return alert("Insufficient");
+      sessions[current].wallet -= amt; saveAll(); updateWallet();
       alert(`Your payment is processed in 2‑3 hours.`);
       go("withdraw");
     }
 
-    if (Object.keys(users).length) { document.getElementById("app").style.display = "block"; renderAll(); }
+    // PWA install
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('service-worker.js')
+        .then(() => console.log('SW registered'))
+        .catch(err => console.log('SW error:', err));
+      });
+    }
+
+    if (Object.keys(users).length) document.getElementById("app").style.display = "block", renderAll();
   </script>
 </body>
 </html>
